--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
 }
